# sparse_ad

./: .gitignore  CMakeLists.txt  batch_edit.sed  doc.omh  doc.xsrst  readme.md  release_notes.omh  release_notes.xsrst  temp.sh
csv/: correct-0717.csv  dummy.csv  speed-210717.csv  speed.csv  temp-210718.csv  test-210719.csv
doc/: .buildinfo  __contents_htm.js  __external_htm.js  __index_htm.js  __reference_htm.js  __search_htm.js  _adolc2sparse_rcv_htm.js  _bin_htm.js  _c2hpp.py_htm.js  _check_sparse_htm.js  _childtable_bin_htm.js  _childtable_sparse_ad_htm.js  _childtable_sparsity_paper_htm.js  _childtable_speed_htm.js  _childtable_utility_htm.js  _contents.htm  _contents.js  _cppadcg_library_htm.js  _csv2tex.py_htm.js  _external.htm  _f2c.sh_htm.js  _fun_base.hpp_htm.js  _index.htm  _prt_sparse_htm.js  _reference.htm  _search.htm  _search.htm.js  _sparse_ad_htm.js  _sparsity_paper_htm.js  _speed_global_htm.js  _speed_htm.js  _speed_setup_htm.js  _speed_test_htm.js  _speed_write_csv_htm.js  _typedef.hpp_htm.js  _upper_triangle_htm.js  _utility_htm.js  _wget_minpack2.sh_htm.js  adolc2sparse_rcv.htm  bin.htm  (+23 more)
doc/_sources/xsrst/: adolc2sparse_rcv.rst.txt  bin.rst.txt  c2hpp_py.rst.txt  check_sparse.rst.txt  cppadcg_library.rst.txt  csv2tex_py.rst.txt  f2c_sh.rst.txt  fun_base_hpp.rst.txt  get_all_sh.rst.txt  prt_sparse.rst.txt  release_notes.rst.txt  run_speed_sh.rst.txt  sparse_ad.rst.txt  speed.rst.txt  speed_global.rst.txt  speed_setup.rst.txt  speed_test.rst.txt  speed_write_csv.rst.txt  typedef_hpp.rst.txt  upper_triangle.rst.txt  utility.rst.txt  wget_minpack2_sh.rst.txt  xsrst_automatic.rst.txt
doc/doctrees/: environment.pickle  index.doctree
doc/doctrees/xsrst/: adolc2sparse_rcv.doctree  bin.doctree  c2hpp_py.doctree  check_sparse.doctree  cppadcg_library.doctree  csv2tex_py.doctree  f2c_sh.doctree  fun_base_hpp.doctree  get_all_sh.doctree  (+13 more)
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/xsrst/: adolc2sparse_rcv.html  bin.html  c2hpp_py.html  check_sparse.html  cppadcg_library.html  csv2tex_py.html  csv_summary_py.html  f2c_sh.html  fun_base_hpp.html  get_all_sh.html  prt_sparse.html  release_notes.html  run_speed_sh.html  sparse_ad.html  speed.html  speed_global.html  speed_setup.html  speed_test.html  speed_write_csv.html  typedef_hpp.html  upper_triangle.html  utility.html  wget_minpack2_sh.html  xsrst_automatic.html
example/: CMakeLists.txt  adolc_ok.cpp  cppad_ok.cpp  cppadcg_ok.cpp  deptfg_ok.cpp  dficfj_extra.cpp  dficfj_ok.cpp  dgl1fg_ok.cpp  dierfj_ok.cpp  example.cpp  f2cpp_ok.cpp  fun_base_ok.hpp  subgraph_ok.cpp
minpack2/tprobs.92/: CMakeLists.txt
sphinx/: conf.py  index.rst  preamble.rst  spelling
sphinx/_build/: index.html
sphinx/xsrst/: adolc2sparse_rcv.rst  c2hpp_py.rst  cppadcg_library.rst  csv2tex_py.rst  csv_summary_py.rst  prt_sparse.rst  release_notes.rst  speed.rst  typedef_hpp.rst  upper_triangle.rst  wget_minpack2_sh.rst  xsrst_automatic.rst
src/: CMakeLists.txt  adouble.cpp  typedef.hpp
src/fun_obj/: CMakeLists.txt  fun_base.cpp  fun_base.hpp  fun_deptfg.cpp  fun_deptfg.hpp  fun_dficfj.cpp  fun_dficfj.hpp  fun_dgl1fg.cpp  fun_dgl1fg.hpp  fun_dierfj.cpp  fun_dierfj.hpp
src/speed/: CMakeLists.txt  adolc.cpp  cppad.cpp  cppadcg.cpp  global.hpp  setup.hpp  speed.cpp  speed.omh  speed.xsrst  subcg.cpp  subgraph.cpp  test.hpp  write_csv.cpp  write_csv.hpp
src/utility/: CMakeLists.txt  adolc2sparse_rcv.cpp  adolc2sparse_rcv.hpp  check_sparse.cpp  check_sparse.hpp  cppadcg_library.cpp  cppadcg_library.hpp  prt_sparse.cpp  prt_sparse.hpp  upper_triangle.cpp  upper_triangle.hpp  utility.omh  utility.xsrst
(+89 files in other folders)
